--- a/index.html
+++ b/index.html
@@ -2,48 +2,59 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rocket Keeper</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
     <header>
-      <h1 class="title">
-        Rocket Keeper
-        <img src="logo.png" alt="Логотип" class="logo" />
-      </h1>
-      <p class="subtitle">Твой персональный помощник в игре</p>
+      <div class="logo-text">
+        <h1>Rocket Keeper</h1>
+        <p class="slogan">Твой персональный помощник в игре</p>
+      </div>
+      <img src="logo.png" alt="Логотип" class="logo" />
     </header>
 
-    <section class="setup">
-      <label for="balance">Укажи свой баланс в Rocket Queen (₽):</label>
-      <input type="number" id="balance" />
-      <p class="note">Рекомендуемый баланс от 2,500 ₽</p>
-      <button onclick="calculateInitialBet()">Рассчитать ставку</button>
+    <section class="input-section">
+      <label for="balance">Укажи свой баланс в игре Rocket Queen</label>
+      <input type="number" id="balance" placeholder="Например: 2500" />
+      <p class="note">Рекомендуемый баланс от 2500₽</p>
+      <button id="calculate-btn">Просчитать ставку</button>
+      <div id="recommendation" class="recommendation hidden"></div>
     </section>
 
-    <section id="bet-setup" style="display:none;">
-      <p class="recommendation">Рекомендуемая ставка (на 6 проигрышей):</p>
-      <input type="number" id="bet" />
-      <p class="note">Ты ставишь и забираешь при коэффициенте <strong>1.5x</strong></p>
-      <button class="start-button" onclick="startGame()">Начать игру</button>
-    </section>
+    <section class="game-section hidden">
+      <div class="stake-input">
+        <label for="custom-stake">Рекомендуемая ставка:</label>
+        <input type="number" id="custom-stake" />
+        <p class="info-text">Расчёт производится под 6 проигрышей подряд. Выигрыш рассчитывается по коэффициенту 1.5x</p>
+        <button id="start-game">Начать игру</button>
+      </div>
 
-    <section id="game-ui" style="display:none;">
+      <div class="result-buttons">
+        <button id="win">Выиграл 💸</button>
+        <button id="lose">Проиграл 😢</button>
+      </div>
+
       <div class="greed-meter">
-        <span id="greed-emoji">😇</span>
-        <input type="range" id="greed" min="0" max="100" value="0" disabled />
-        <span>😈</span>
+        <div class="greed-labels">
+          <span>😇</span>
+          <span>💀</span>
+        </div>
+        <div class="greed-bar-container">
+          <div id="greed-bar"></div>
+        </div>
       </div>
 
-      <div class="buttons">
-        <button class="win" onclick="recordResult(true)">Выиграл 💸</button>
-        <button class="lose" onclick="recordResult(false)">Проиграл 😢</button>
+      <div id="notifications"></div>
+      <div class="status">
+        <p>Баланс: <span id="current-balance">0</span>₽</p>
+        <p>Текущая ставка: <span id="current-stake">0</span>₽</p>
+        <p>Целевой множитель: <span>1.5x</span></p>
       </div>
 
-      <p id="status" class="status"></p>
-      <button class="reset" onclick="resetGame()">Сбросить</button>
+      <button id="reset">Сбросить</button>
     </section>
   </div>
 
