--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <header>
       <h1>🚀 Rocket Keeper</h1>
-      <p class="subtitle">Твой персональный помощник в игре</p>
+      <p class="subtitle">Твой персональный помощник в игре Rocket Queen</p>
     </header>
 
     <div class="screen" id="start-screen">
