--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="app">
     <header>
       <h1>🚀 Rocket Keeper</h1>
-      <p class="subtitle">Твой персональный помощник в игре Rocket Queen</p>
+      <p class="subtitle">Твой персональный помощник в игре Rocket Queen🚀</p>
     </header>
 
     <div class="screen" id="start-screen">
@@ -20,7 +20,7 @@
       <button onclick="calculateInitialStake()">Рассчитать ставку</button>
       <div id="suggestion-box"></div>
 
-      <label>Желаемая ставка (можно изменить):</label>
+      <label>Рекомендуемая ставка (можно изменить):</label>
       <input type="number" id="custom-stake-input" disabled />
 
       <button class="start-btn" onclick="startGame()">Начать игру</button>
